--- a/.gitignore
+++ b/.gitignore
@@ -26,22 +26,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+.env
 
-#Devise
-gem 'devise'
-
-#Table_Print
-gem "table_print"
-
-#.env
-gem 'dotenv-rails'
-
-gem "letter_opener", :group => :development
-
-#Gem Stripe payements
-gem 'stripe'
-
-gem 'faker'
-
-#Tests
-gem 'factory_bot_rails'
+.DS_STORE
